Add Privacy Policy link to footer and confirm #signup nav button

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <style>
   :root {
     --coral: #FF6B47;
-    --coral-light: #FF8C6E;
+    --coral-light: #FF8C6E
     --coral-pale: #FFF0EB;
     --warm-white: #FFFAF8;
     --dark: #1A1108;
@@ -735,7 +735,7 @@
 <!-- FOOTER -->
 <footer>
   <div class="logo">Audition<span>Alert</span></div>
-  <p>© 2026 AuditionAlert. Built for actors, by someone who gets it.</p>
+  <p>© 2026 AuditionAlert. Built for actors, by someone who gets it. · <a href="/privacy-policy.html" style="color: var(--light); text-decoration: none;">Privacy Policy</a>a></p>
 </footer>
 
 </body>
