--- a/index.html
+++ b/index.html
@@ -735,7 +735,7 @@
 <!-- FOOTER -->
 <footer>
   <div class="logo">Audition<span>Alert</span></div>
-  <p>© 2026 AuditionAlert. Built for actors, by someone who gets it. · <a href="/privacy-policy.html" style="color: var(--light); text-decoration: none;">Privacy Policy</a>a></p>
+  <p>© 2026 AuditionAlert. Built for actors, by someone who gets it. · <a href="/privacy-policy.html" style="color: var(--light); text-decoration: none;">Privacy Policy</a></p>
 </footer>
 
 </body>
