--- a/index.html
+++ b/index.html
@@ -629,7 +629,7 @@
         </div>
         <div class="message-bubble">
           <div class="project">🎬 New Audition Alert!</div>
-          <div><strong>Project:</strong> Neighbours Season 2</div>
+          <div><strong>Project:</strong> Knight of the Seven Kingdoms Season 2</div>
           <div><strong>Role:</strong> Lead Male, 30s</div>
           <div><strong>Type:</strong> Self Tape</div>
           <div><strong>Deadline:</strong> Fri 28 Feb, 5pm</div>
